--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,11 @@
     "description": "Write slim routes in your controllers/actions",
     "type": "library",
     "require": {
-        "doctrine/annotations": "^1.6"
+        "doctrine/annotations": "^1.6",
+        "slim/slim": "^3.11"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.4",
-        "spatie/phpunit-watcher": "^1.8",
-        "slim/slim": "^3.11",
-        "monolog/monolog": "^1.24"
+        "phpunit/phpunit": "^7.4"
     },
     "license": "MIT",
     "authors": [
@@ -18,9 +16,6 @@
             "email": "marciojr91@gmail.com"
         }
     ],
-    "config": {
-        "process-timeout": 0
-    },
     "autoload": {
         "psr-4": {
             "Mdojr\\SlimAnnotations\\": "src"
